--- a/Twitter_Sentiment_Analysis_using_ML.ipynb
+++ b/Twitter_Sentiment_Analysis_using_ML.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN2FQQoejL+SySpBDtR2EwB",
+      "authorship_tag": "ABX9TyPrNEVY1GvvhlP0uFpMz0pM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,13 +28,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "BBJuiOaUCZ5Z",
-        "outputId": "e3c5cf15-8415-47fa-cf8e-b44995c56252"
+        "outputId": "98b3b926-ab76-4f83-ae1a-b8cf1b737e79"
       },
       "outputs": [
         {
@@ -74,9 +74,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "y3nl7uWWFY8v",
-        "outputId": "a403c003-9c3b-4dde-b812-64fd918ee371"
+        "outputId": "a4b787b6-33b9-4140-84ec-acd716df91b9"
       },
-      "execution_count": 3,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -99,9 +99,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "9r1QcGdAFY_e",
-        "outputId": "d9bbf899-ca6d-43de-9d1a-369d6af0c756"
+        "outputId": "cbb3c9ad-c5be-4795-e41e-ef4f4f8e2dfc"
       },
-      "execution_count": 4,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -110,8 +110,8 @@
             "Dataset URL: https://www.kaggle.com/datasets/kazanova/sentiment140\n",
             "License(s): other\n",
             "Downloading sentiment140.zip to /content\n",
-            " 99% 80.0M/80.9M [00:04<00:00, 18.9MB/s]\n",
-            "100% 80.9M/80.9M [00:04<00:00, 20.2MB/s]\n"
+            " 98% 79.0M/80.9M [00:01<00:00, 82.4MB/s]\n",
+            "100% 80.9M/80.9M [00:01<00:00, 77.3MB/s]\n"
           ]
         }
       ]
@@ -132,9 +132,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "bEtaE-piFZGG",
-        "outputId": "1f5357ff-88dd-418d-c897-e1e27790c6d6"
+        "outputId": "71f77486-9a4a-4326-ef2e-1c5117b3b60b"
       },
-      "execution_count": 5,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -163,7 +163,7 @@
       "metadata": {
         "id": "FtmNW_8tFZP9"
       },
-      "execution_count": 6,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -177,9 +177,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "HwPuEpbgKYv1",
-        "outputId": "a0692f9a-361e-4bef-9a7e-c4097f20ed99"
+        "outputId": "369dcb3b-ad58-4dc0-a9fe-94925d25473a"
       },
-      "execution_count": 7,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -197,7 +197,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 7
+          "execution_count": 6
         }
       ]
     },
@@ -212,9 +212,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "bEgZv5mrKhHU",
-        "outputId": "fef7ab53-52ee-41d2-d9cc-1315cc80d376"
+        "outputId": "759e5ec2-f89e-4626-c736-e33b13293d6a"
       },
-      "execution_count": 8,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -243,7 +243,7 @@
       "metadata": {
         "id": "ryEdbRXhKhKK"
       },
-      "execution_count": 9,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -257,9 +257,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "YivzP1Cl-QWK",
-        "outputId": "2c8e30e0-e63f-4e3d-ed9d-61452f4b404f"
+        "outputId": "307e59f6-e5c0-4062-d2ec-76bea291ba98"
       },
-      "execution_count": 10,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -269,7 +269,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 10
+          "execution_count": 9
         }
       ]
     },
@@ -282,12 +282,12 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 310
+          "height": 660
         },
         "id": "kwr7qyxL-RM8",
-        "outputId": "f519e850-8879-4619-87de-687475a33b04"
+        "outputId": "ad635b9b-1851-492f-b51e-81ad4783257f"
       },
-      "execution_count": 11,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -309,7 +309,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-7019057e-1880-49e0-b46a-8e34114b5f84\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-fe9fa9c1-d38f-4c15-8499-816b00cbbe31\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -388,7 +388,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-7019057e-1880-49e0-b46a-8e34114b5f84')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-fe9fa9c1-d38f-4c15-8499-816b00cbbe31')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -440,12 +440,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-7019057e-1880-49e0-b46a-8e34114b5f84 button.colab-df-convert');\n",
+              "        document.querySelector('#df-fe9fa9c1-d38f-4c15-8499-816b00cbbe31 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-7019057e-1880-49e0-b46a-8e34114b5f84');\n",
+              "        const element = document.querySelector('#df-fe9fa9c1-d38f-4c15-8499-816b00cbbe31');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -465,8 +465,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-f19491a3-563d-4445-bccb-d85b62f590ce\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-f19491a3-563d-4445-bccb-d85b62f590ce')\"\n",
+              "<div id=\"df-747459ab-6fb6-4dce-9cd3-b88e9c76127f\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-747459ab-6fb6-4dce-9cd3-b88e9c76127f')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -585,7 +585,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-f19491a3-563d-4445-bccb-d85b62f590ce button');\n",
+              "        document.querySelector('#df-747459ab-6fb6-4dce-9cd3-b88e9c76127f button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -601,7 +601,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 11
+          "execution_count": 10
         }
       ]
     },
@@ -616,7 +616,7 @@
       "metadata": {
         "id": "GPZq2Hdv_tnz"
       },
-      "execution_count": 12,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -628,12 +628,12 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 206
+          "height": 573
         },
         "id": "MSSnFnkfArgl",
-        "outputId": "ffd7c474-bd7b-42d9-bbd7-8d8c1f5bc359"
+        "outputId": "1c9b7f0b-b29f-4c30-b92d-b213cbb8bf28"
       },
-      "execution_count": 13,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -655,7 +655,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-b627506d-5e4b-4a59-b948-f3ef75505e98\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-bce2d62e-639a-4712-95d7-f755b1f3a587\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -734,7 +734,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-b627506d-5e4b-4a59-b948-f3ef75505e98')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-bce2d62e-639a-4712-95d7-f755b1f3a587')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -786,12 +786,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-b627506d-5e4b-4a59-b948-f3ef75505e98 button.colab-df-convert');\n",
+              "        document.querySelector('#df-bce2d62e-639a-4712-95d7-f755b1f3a587 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-b627506d-5e4b-4a59-b948-f3ef75505e98');\n",
+              "        const element = document.querySelector('#df-bce2d62e-639a-4712-95d7-f755b1f3a587');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -811,8 +811,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-746d5fa7-4d88-46fd-bbed-fb64b9f5f644\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-746d5fa7-4d88-46fd-bbed-fb64b9f5f644')\"\n",
+              "<div id=\"df-c38cefdf-ccf8-41ea-bbad-e923d862cdce\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-c38cefdf-ccf8-41ea-bbad-e923d862cdce')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -931,7 +931,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-746d5fa7-4d88-46fd-bbed-fb64b9f5f644 button');\n",
+              "        document.querySelector('#df-c38cefdf-ccf8-41ea-bbad-e923d862cdce button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -947,7 +947,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 13
+          "execution_count": 12
         }
       ]
     },
@@ -965,9 +965,9 @@
           "height": 272
         },
         "id": "GA579MzTA11Y",
-        "outputId": "b63199b5-6a3b-46b8-c4a2-2ffea0412852"
+        "outputId": "11c6d024-5a4b-457f-84c7-8516cd9486cf"
       },
-      "execution_count": 14,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1034,7 +1034,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 14
+          "execution_count": 13
         }
       ]
     },
@@ -1050,9 +1050,9 @@
           "height": 178
         },
         "id": "cWmK55AKA14A",
-        "outputId": "7cae69c7-92e6-4829-f93f-2c6376f3821e"
+        "outputId": "436e2746-f981-4371-9cc8-877dc87d4e15"
       },
-      "execution_count": 15,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1104,7 +1104,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 15
+          "execution_count": 14
         }
       ]
     },
@@ -1125,7 +1125,7 @@
       "metadata": {
         "id": "TFZ9bi30gUTU"
       },
-      "execution_count": 16,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -1140,9 +1140,9 @@
           "height": 178
         },
         "id": "hRFQLYMpgUWD",
-        "outputId": "4ca95b6c-7365-4f1b-db2f-6b560a6183e1"
+        "outputId": "d860504b-ceaf-4b35-a40f-8b938ff0783c"
       },
-      "execution_count": 17,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1194,7 +1194,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 17
+          "execution_count": 16
         }
       ]
     },
@@ -1231,7 +1231,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "hola"
+        "example: actor, actress, acting = act"
       ],
       "metadata": {
         "id": "oXYVh6yNkCIj"
@@ -1239,7 +1239,9 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "port_stem = PorterStemmer()"
+      ],
       "metadata": {
         "id": "ZgTwklK1kWVb"
       },
@@ -1248,11 +1250,19 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "def stemming(content):\n",
+        "  stemmed_content = re.sub('[^a-zA-Z]', ' ', content)\n",
+        "  stemmed_content = stemmed_content.lower()\n",
+        "  stemmed_content = stemmed_content.split()\n",
+        "  stemmed_content = [port_stem.stem(word) for word in stemmed_content if not word in stopwords.words('english')]\n",
+        "  stemmed_content = ' '.join(stemmed_content)\n",
+        "  return stemmed_content"
+      ],
       "metadata": {
         "id": "K8PO_Xw0kWZF"
       },
-      "execution_count": 17,
+      "execution_count": 18,
       "outputs": []
     },
     {
@@ -1261,7 +1271,7 @@
       "metadata": {
         "id": "Z9hWEd08iFyp"
       },
-      "execution_count": 17,
+      "execution_count": 18,
       "outputs": []
     }
   ]
